<resources>
    <string name="app_name">LearningProject</string>
    <string name="todo">TODO</string>

    // sign in
    <string name="sign_in">Sign In</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="or">or</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_yet_sign_up">Don’t have an account yet? Sign up.</string>

    //sign up
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>

    //data collection
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started">Get Started</string>
    <string name="what_is_your_name">What is your nickname</string>
    <string name="how_old_are_you">How old are you</string>
    <string name="what_is_your_gender">What is your gender</string>
    <string name="where_are_you_from">Where are you from</string>
    <string name="what_would_you_like_to_do_today">What would you like to do today?</string>
    <string name="let_s_get_started">Let’s get started!</string>
    <string name="diary">Diary</string>

    //profile
    <string name="my_profile">My Profile</string>
    <string name="friends">Friends</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="log_out">Log Out</string>
    <string name="wait_take_me_back">Wait, take me back!</string>
    <string name="yes_i_m_sure_see_you">Yes, I’m sure. See you!</string>
    <string name="are_you_sure_you_n_want_to_log_out">Are you sure you\n want to log out</string>

    //post
    <string name="post">Post</string>
    <string name="post_public">public</string>
    <string name="post_private">diary</string>
    <string name="restart">restart</string>
    <string name="what_s_on_your_mind_today">what’s on your mind today?</string>
    <string name="_1000_words_maximum">1000 words maximum</string>
    <string name="notification">Notification</string>
    <string name="community">Community</string>
</resources>