<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.example.learningproject.getstarted.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/login"
        tools:context=".getstarted.login.LoginActivity">

        <View
            android:id="@+id/viewLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/loginres"
            tools:layout_editor_absoluteX="68dp"
            tools:layout_editor_absoluteY="16dp" />

        <ImageView
            android:id="@+id/imgPear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:src="@drawable/pear"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.11" />

        <TextView
            android:id="@+id/txtSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/sign_in"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgPear" />

        <Button
            android:id="@+id/btnGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/signbtn"
            android:drawableStart="@drawable/gg"
            android:gravity="center"
            android:paddingStart="10dp"
            android:text="@string/continue_with_google"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/txtSignIn"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/btnFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/signbtn"
            android:drawableStart="@drawable/fb"
            android:gravity="center"
            android:paddingStart="15dp"
            android:text="@string/continue_with_facebook"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/btnGoogle"
            tools:ignore="RtlSymmetry" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />


        <View
            android:id="@+id/firstLine"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/line"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnFacebook" />

        <View
            android:id="@+id/secondLine"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/btnFacebook" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="@color/textColor"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/firstLine"
            app:layout_constraintEnd_toEndOf="@+id/guideline1"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toTopOf="@id/firstLine" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/signbtn"
            android:drawableStart="@drawable/email_icon"
            android:drawablePadding="15dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingVertical="16dp"
            android:paddingStart="15dp"
            android:text="@={model.emailInput}"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/firstLine"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/signbtn"
            android:drawableStart="@drawable/password"
            android:drawablePadding="15dp"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingVertical="16dp"
            android:paddingStart="15dp"
            android:text="@={model.passwordInput}"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/edtEmail"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/btn"
            android:onClick="@{()->model.signIn()}"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword"
            tools:layout_editor_absoluteX="35dp" />

        <TextView
            android:id="@+id/txtAccountSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:onClick="@{()->model.moveToSignUp()}"
            android:text="@string/don_t_have_an_account_yet_sign_up"
            android:textColor="#035352"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>