<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.example.learningproject.getstarted.datacollection.DataCollectionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/greenbg"
        tools:context=".getstarted.datacollection.DataCollectionActivity">


        <ImageView
            android:id="@+id/imgCloud0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/moon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtNickName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:hint="@string/what_is_your_name"
            android:text="@={model.inputNickName}"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgCloud0" />

        <EditText
            android:id="@+id/edtAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:hint="@string/how_old_are_you"
            android:inputType="number"
            android:text="@={model.inputAge}"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtNickName" />

        <EditText
            android:id="@+id/edtGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:hint="@string/what_is_your_gender"
            android:inputType="text"
            android:text="@={model.inputGender}"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtAge" />

        <EditText
            android:id="@+id/edtFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:hint="@string/where_are_you_from"
            android:inputType="text"
            android:text="@={model.inputCountry}"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtGender" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btnstart"
            android:onClick="@{()->model.moveToHomePage()}"
            android:paddingHorizontal="15dp"
            android:text="@string/let_s_get_started"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtFrom" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>