<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="data"
            type="com.example.learningproject.getstarted.register.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/login"
        tools:context=".getstarted.register.SignUpActivity">

        <ProgressBar
            android:id="@+id/signUpProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/viewLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/loginres"
            tools:layout_editor_absoluteX="68dp"
            tools:layout_editor_absoluteY="16dp" />

        <ImageView
            android:id="@+id/imgPear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:src="@drawable/pear"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.11" />

        <TextView
            android:id="@+id/txtSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/sign_up"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgPear" />

        <EditText
            android:id="@+id/edtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/signbtn"
            android:drawableStart="@drawable/user"
            android:drawablePadding="15dp"
            android:hint="@string/name"
            android:paddingVertical="16dp"
            android:paddingStart="15dp"
            android:text="@={data.inputName}"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/txtSignUp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/signbtn"
            android:drawableStart="@drawable/email_icon"
            android:drawablePadding="15dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingVertical="16dp"
            android:paddingStart="15dp"
            android:text="@={data.inputEmail}"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/edtUserName"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/signbtn"
            android:drawableStart="@drawable/password"
            android:drawablePadding="15dp"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingVertical="16dp"
            android:paddingStart="15dp"
            android:text="@={data.inputPassword}"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/edtEmail"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/edtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/signbtn"
            android:drawableStart="@drawable/password"
            android:drawablePadding="15dp"
            android:hint="@string/confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingVertical="16dp"
            android:paddingStart="15dp"
            android:text="@={data.inputConfirmPassword}"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/btn"
            android:onClick="@{()->data.signUp()}"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/edtConfirmPassword"
            tools:layout_editor_absoluteX="40dp" />

        <TextView
            android:id="@+id/txtAccountSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:onClick="@{()->data.moveToSignIn()}"
            android:text="@string/already_have_an_account_sign_in"
            android:textColor="#035352"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>